adding contacts app

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <!-- Lightbox -->
     <link rel="stylesheet" href="{% static '/css/lightbox.min.css' %}" />
 
-    <title>Bt real estate</title>
+    <title>Bt real estate {% block title %} {% endblock %}</title>
   </head>
   <body>
     <!-- Top Bar -->
